--- a/ProyectoHsj_alpha/Views/Shared/_Layout.cshtml
+++ b/ProyectoHsj_alpha/Views/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     <title>@ViewData["Title"] - Hoy se juega </title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <link href="~/css/Style_navbar.css" rel="stylesheet" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
@@ -62,10 +63,15 @@
             @RenderBody()
         </main>
     </div>
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2024 - ProyectoHsj_alpha - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-        </div>
+    <footer>
+        <p>© 2024 Tu Empresa. Todos los derechos reservados.</p>
+        <p>
+            <a href="https://www.instagram.com/hoy_se_juega/">
+                <i class="fa-brands fa-instagram"></i>
+            </a>
+            <a href="/Home/Enlace2">Enlace 2</a>
+            <a href="/Home/Enlace3">Enlace 3</a>
+        </p>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
