--- a/ProyectoHsj_alpha/Views/Shared/_Layout.cshtml
+++ b/ProyectoHsj_alpha/Views/Shared/_Layout.cshtml
@@ -16,7 +16,10 @@
     <header>
         <div class="container-center">
             <nav class="navbar navbar-expand-sm shadow mb-3">
-                <a class="lg" asp-area="" asp-controller="Home" asp-action="Index">Hoy se juega</a>
+                <a class="lg" asp-area="" asp-controller="Home" asp-action="Index">
+                    <img src="~/css/img/hoysejuegaa.png" alt="Hoy se juega" class="img-fluid" />
+                </a>
+                
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -26,7 +29,7 @@
                             <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Privacy">Pruebas</a>
                         </li>
                         @if (User.Identity!.IsAuthenticated)
                         {
@@ -44,6 +47,10 @@
                             }
                             <li class="nav-item">
                                 <a class="nav-link" asp-area="" asp-controller="Acces" asp-action="Cerrar">Cerrar sesión</a>
+                            </li>
+
+                            <li class="nav-item">
+                                <a class="nav-link" asp-area="" asp-controller="PerfilU" asp-action="Perfil"><i class="fa-solid fa-user"></i></a>
                             </li>
                             
                         }
@@ -69,10 +76,18 @@
             <a href="https://www.instagram.com/hoy_se_juega/">
                 <i class="fa-brands fa-instagram"></i>
             </a>
-            <a href="/Home/Enlace2">Enlace 2</a>
+            <a href="https://beelup.com/ar/">
+                <i class="fa-brands fa-instagram"></i>
+            </a>
             <a href="/Home/Enlace3">Enlace 3</a>
         </p>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3280.430435698638!2d-58.478831225594874!3d-34.69432181307689!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccf548d3bf9c3%3A0x3356bcb2fd8a5151!2sHoy%20se%20juega%20f%C3%BAtbol%205!5e0!3m2!1ses-419!2sar!4v1725323915380!5m2!1ses-419!2sar"
+                width="300" height="300" style="border:0;" allowfullscreen=""
+                loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </footer>
+
+    
+
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
