--- a/ProyectoHsj_alpha/Views/Shared/Layout_admin.cshtml
+++ b/ProyectoHsj_alpha/Views/Shared/Layout_admin.cshtml
@@ -14,6 +14,7 @@
                 #sidebar-wrapper {
                          width: 250px;
                          min-height: 100vh;
+                         transition: margin 0.3s ease;
                 }   
 
                 #page-content-wrapper {
