--- a/ProyectoHsj_alpha/Views/Usuarios/Index.cshtml
+++ b/ProyectoHsj_alpha/Views/Usuarios/Index.cshtml
@@ -24,12 +24,11 @@
         <table class="table table-striped table-bordered table-dark">
             <thead class="thead-light">
                 <tr>
-                    <th>@Html.DisplayNameFor(model => model.NombreUsuario)</th>
-                    <th>@Html.DisplayNameFor(model => model.ApellidoUsuario)</th>
-                    <th>@Html.DisplayNameFor(model => model.CorreoUsuario)</th>
-                    <th>@Html.DisplayNameFor(model => model.ContraseniaUsuario)</th>
-                    <th>@Html.DisplayNameFor(model => model.TelefonoUsuario)</th>
-                    <th>@Html.DisplayNameFor(model => model.IdRolNavigation)</th>
+                    <th>Nombre</th>
+                    <th>Apellido</th>
+                    <th>Correo</th>
+                    <th>Numero de telefono</th>
+                    <th>Rol</th>
                     <th>Actions</th>
                 </tr>
             </thead>
@@ -40,7 +39,6 @@
                         <td>@Html.DisplayFor(modelItem => item.NombreUsuario)</td>
                         <td>@Html.DisplayFor(modelItem => item.ApellidoUsuario)</td>
                         <td>@Html.DisplayFor(modelItem => item.CorreoUsuario)</td>
-                        <td>@Html.DisplayFor(modelItem => item.ContraseniaUsuario)</td>
                         <td>@Html.DisplayFor(modelItem => item.TelefonoUsuario)</td>
                         <td>@Html.DisplayFor(modelItem => item.IdRolNavigation.IdRol)</td>
                         <td>
