Integracion de PyE - comentrarios agregados

--- a/ProyectoHsj_alpha/Views/Acces/Login.cshtml
+++ b/ProyectoHsj_alpha/Views/Acces/Login.cshtml
@@ -30,7 +30,7 @@
                                 <div class="form-outline mb-4">
                                     <input type="password" class="form-control form-control-user"
                                            placeholder="Contraseña" required asp-for="ContraseniaUsuario" />
-                                    <label class="form-label" for="form3Example1cg">password</label>
+                                    <label class="form-label" for="form3Example1cg">Contraseña</label>
                                 </div>
 
                                 <div class="d-flex justify-content-center">
@@ -52,15 +52,15 @@
                                 }
 
                                 <p class="text-center text-muted mt-5 mb-0">
-                                    Don't have an account? <a class="fw-bold text-body" asp-controller="Acces" asp-action="Signup"  ><u> Register here </u></a>
+                                    ¿No tienes una cuenta? <a class="fw-bold text-body" asp-controller="Acces" asp-action="Signup"  ><u> Register here </u></a>
                                 </p>
 
                                 <p class="text-center text-muted mt-5 mb-0">
-                                    Te queres loguear por google? <a class="fw-bold text-body" asp-controller="Acces" asp-action="GoogleLogin"><u> Login here </u></a>
+                                    Queres ingresar meidante google? <a class="fw-bold text-body" asp-controller="Acces" asp-action="GoogleLogin"><u> Login here </u></a>
                                 </p>
 
                                 <p class="text-center text-muted mt-5 mb-0">
-                                    Sos boludo y te olvidaste la contraseña, como te dicen angel? <a class="fw-bold text-body" asp-controller="Account" asp-action="ForgotPassword"><u> CLICK aqui </u></a>
+                                    ¿Olvidaste tu contraseña? <a class="fw-bold text-body" asp-controller="Account" asp-action="ForgotPassword"><u> CLICK aqui </u></a>
                                 </p>
 
                             </form>
