--- a/ProyectoHsj_alpha/Views/Acces/Signup.cshtml
+++ b/ProyectoHsj_alpha/Views/Acces/Signup.cshtml
@@ -16,70 +16,83 @@
                     <!-- Ajuste de columnas para mayor ancho -->
                     <div class="card" style="border-radius: 15px;">
                         <div class="card-body p-5">
-                            <h2 class="text-uppercase text-center mb-5"> Crear cuenta de usuario </h2>
+                            <h2 class="text-uppercase text-center mb-5">Crear cuenta de usuario</h2>
 
-                            <form asp-controller="Acces" asp-action="Signup" method="post" >
-
-                                <div class="form-outline mb-4">
-                                    <input type="text" class="form-control form-control-user"
-                                           placeholder="Nombre completo" required asp-for="NombreUsuario" />
-                                    <label class="form-label" for="form3Example1cg">Your Name</label>
-                                </div>
-                                <div class="form-outline mb-4">
-                                    <input type="text" class="form-control form-control-user"
-                                           placeholder="Apellido" required asp-for="ApellidoUsuario" />
-                                    <label class="form-label" for="form3Example1cg">Surname</label>
-                                </div>
-
-                                <div class="form-outline mb-4">
-                                    <input type="email" class="form-control form-control-user"
-                                           placeholder="Correo electronico" required asp-for="CorreoUsuario" />
-                                    <label class="form-label" for="form3Example1cg">Email</label>
-                                </div>
-                                <div class="form-outline mb-4">
-                                    <input type="number" class="form-control form-control-user"
-                                           placeholder="Numero de telefono" required asp-for="TelefonoUsuario" />
-                                    <label class="form-label" for="form3Example1cg">Number phone</label>
+                            <form asp-controller="Acces" asp-action="Signup" method="post">
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        <div class="form-outline mb-4">
+                                            <input type="text" class="form-control form-control-user"
+                                                   placeholder="Nombre completo" required asp-for="NombreUsuario" />
+                                            <label class="form-label" for="form3Example1cg">Nombre</label>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-6">
+                                        <div class="form-outline mb-4">
+                                            <input type="text" class="form-control form-control-user"
+                                                   placeholder="Apellido" required asp-for="ApellidoUsuario" />
+                                            <label class="form-label" for="form3Example1cg">Apellido</label>
+                                        </div>
+                                    </div>
                                 </div>
 
-                                <div class="form-outline mb-4">
-                                    <input type="password" class="form-control form-control-user"
-                                           placeholder="Contraseña" required asp-for="ContraseniaUsuario" />
-                                    <label class="form-label" for="form3Example1cg">password</label>
-                                </div>
-                                <div class="form-outline mb-4">
-                                    <input type="password" class="form-control form-control-user"
-                                           placeholder="Confirme contraseña" required asp-for="ConfirmarContraseña" />
-                                    <label class="form-label" for="form3Example1cg">password</label>
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        <div class="form-outline mb-4">
+                                            <input type="email" class="form-control form-control-user"
+                                                   placeholder="Correo electrónico" required asp-for="CorreoUsuario" />
+                                            <label class="form-label" for="form3Example1cg">Email</label>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-6">
+                                        <div class="form-outline mb-4">
+                                            <input type="number" class="form-control form-control-user"
+                                                   placeholder="Número de teléfono" required asp-for="TelefonoUsuario" />
+                                            <label class="form-label" for="form3Example1cg">Teléfono</label>
+                                        </div>
+                                    </div>
                                 </div>
 
-
-                                
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        <div class="form-outline mb-4">
+                                            <input type="password" class="form-control form-control-user"
+                                                   placeholder="Contraseña" required asp-for="ContraseniaUsuario" />
+                                            <label class="form-label" for="form3Example1cg">Contraseña</label>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-6">
+                                        <div class="form-outline mb-4">
+                                            <input type="password" class="form-control form-control-user"
+                                                   placeholder="Confirme contraseña" required asp-for="ConfirmarContraseña" />
+                                            <label class="form-label" for="form3Example1cg">Confirme contraseña</label>
+                                        </div>
+                                    </div>
+                                </div>
 
                                 <div class="form-check d-flex justify-content-center mb-5">
                                     <input class="form-check-input me-2" type="checkbox" value="" id="form2Example3cg" />
                                     <label class="form-check-label" for="form2Example3g">
-                                        I agree all statements in <a href="#!" class="text-body"><u>Terms of service</u></a>
+                                        Estoy de acuerdo con los <a href="#!" class="text-body"><u>Términos de servicio</u></a>
                                     </label>
                                 </div>
 
                                 <div class="d-flex justify-content-center">
                                     <button type="submit" class="btn btn-success btn-block btn-lg gradient-custom-4 text-body">
-                                        Register
+                                        Registrarse
                                     </button>
                                 </div>
+
                                 @if (ViewData["Message"] != null)
                                 {
-                                    <div class="alert alert-danger" role="alert">
+                                    <div class="alert alert-danger mt-4" role="alert">
                                         @ViewData["Message"]
-
                                     </div>
                                 }
 
                                 <p class="text-center text-muted mt-5 mb-0">
-                                    Have already an account? <a  class="fw-bold text-body" asp-controller="Acces" asp-action="Login" ><u>Login here</u></a>
+                                    ¿Ya tienes una cuenta? <a class="fw-bold text-body" asp-controller="Acces" asp-action="Login"><u>Inicia sesión aquí</u></a>
                                 </p>
-
                             </form>
 
                         </div>
