--- a/ProyectoHsj_alpha/Views/Shared/_AdminSidebar.cshtml
+++ b/ProyectoHsj_alpha/Views/Shared/_AdminSidebar.cshtml
@@ -5,19 +5,21 @@
 </div>
 <ul class="list-group list-group-flush">
     <li class="btn-custom">
-        <a class="link-no-style" asp-controller="Home" asp-action="Index"> INICIO </a>
+        <a class="link-no-style" asp-controller="Home" asp-action="Index"> HOME </a>
+    </li>
+    <li class="btn-custom">
+        <a class="link-no-style" asp-controller="Home" asp-action="Admin_home"> Inicio </a>
     </li>
     <li class="btn-custom">
         <a class="link-no-style" asp-area=" " asp-controller="Rols" asp-action="Index"> Roles </a>
     </li>
-    <li class="btn-custom" >
-        <a  class="link-no-style" asp-controller="Usuarios" asp-action="Index" > Usuarios </a>
+    <li class="btn-custom">
+        <a class="link-no-style" asp-controller="Usuarios" asp-action="Index"> Usuarios </a>
     </li>
-    @if(User.IsInRole("2"))
+    @if (User.IsInRole("2"))
     {
         <li class="btn-custom">
             <a class="link-no-style" asp-controller="Permisos" asp-action="ManageView"> Permisos </a>
         </li>
-
     }
 </ul>
