--- a/ProyectoHsj_alpha/Views/Reserva/ReservaView.cshtml
+++ b/ProyectoHsj_alpha/Views/Reserva/ReservaView.cshtml
@@ -2,3 +2,29 @@
     Layout = null;
 }
 <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+
+@model List<ProyectoHsj_alpha.Models.Reserva>
+
+<h2>Reservas</h2>
+
+@if (TempData["Mensaje"] != null)
+{
+    <div class="alert alert-success">@TempData["Mensaje"]</div>
+}
+
+<table class="table">
+    <thead>
+        <tr>
+            <th>Cancha</th>
+            <th>Fecha</th>
+            <th>Horario</th>
+            <th>Acciones</th>
+        </tr>
+    </thead>
+    <tbody>
+       Aca haces tu reserva
+    </tbody>
+</table>
+
+<a asp-controller="Reserva" asp-action="Crear" class="btn btn-primary">Crear Reserva</a>
+
