--- a/ProyectoHsj_alpha/Views/Shared/_Layout.cshtml
+++ b/ProyectoHsj_alpha/Views/Shared/_Layout.cshtml
@@ -5,12 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Hoy se juega </title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <!-- Bootstrap CSS -->
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-mr0sEQx0ugYb43aCvEd24S/IqrBKTFFmwSDQHl3j06YlXIQo6RuCZ1w5o9sMR4bo" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
+    <!-- Custom Styles -->
     <link href="~/css/Style_navbar.css" rel="stylesheet" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/ProyectoHsj_alpha.styles.css" asp-append-version="true" />
+   
+    
+   
+    
 </head>
 <body>
     <header>
@@ -45,12 +54,25 @@
                                     <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Admin_home">Employee Panel</a>
                                 </li>
                             }
+                            <!-- 
                             <li class="nav-item">
                                 <a class="nav-link" asp-area="" asp-controller="Acces" asp-action="Cerrar">Cerrar sesión</a>
                             </li>
+                            -->
 
-                            <li class="nav-item">
-                                <a class="nav-link" asp-area="" asp-controller="PerfilU" asp-action="Perfil"><i class="fa-solid fa-user"></i></a>
+                            <!-- Mi Perfil con el nombre de usuario -->
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" id="perfilDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    <i class="fa-solid fa-user" style="color:white"></i>
+                                </a>
+                                <ul class="dropdown-menu" aria-labelledby="perfilDropdown">
+                                    <li><a class="dropdown-item"  asp-controller="PerfilU" asp-action="Perfil">Ver Perfil</a></li>
+                                    <li class="dropdown-divider"></li>
+                                    <li class="dropdown-item">
+                                        <span>@User.Identity.Name</span> <!-- Nombre del usuario logueado -->
+                                    </li>
+                                    <li><a class="dropdown-item" asp-controller="Acces" asp-action="Cerrar">Cerrar sesión</a></li>
+                                </ul>
                             </li>
                             
                         }
@@ -86,11 +108,18 @@
                 loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </footer>
 
-    
-
+    <!-- jQuery -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <!-- Bootstrap JS (Incluye Popper) -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+
+    
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- scripts customs -->
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- scripts render -->
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
