--- a/ProyectoHsj_alpha/Views/PerfilU/Perfil.cshtml
+++ b/ProyectoHsj_alpha/Views/PerfilU/Perfil.cshtml
@@ -63,11 +63,11 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="resetPasswordModalLabel">Resetear Contraseña</h5>
+                    <h5 class="modal-title" id="resetPasswordModalLabel">Cambiar Contraseña</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <p>¿Estás seguro de que deseas resetear la contraseña?</p>
+                    <p>¿Estás seguro de que deseas restablecer la contraseña?</p>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
