--- a/ProyectoHsj_alpha/Views/Shared/_AdminSidebar.cshtml
+++ b/ProyectoHsj_alpha/Views/Shared/_AdminSidebar.cshtml
@@ -5,10 +5,10 @@
 </div>
 <ul class="list-group list-group-flush">
     <li class="btn-custom">
-        <a class="link-no-style" asp-controller="Home" asp-action="Index"> HOME </a>
+        <a class="link-no-style" asp-controller="Home" asp-action="Index"> Inicio </a>
     </li>
     <li class="btn-custom">
-        <a class="link-no-style" asp-controller="Home" asp-action="Admin_home"> Inicio </a>
+        <a class="link-no-style" asp-controller="Home" asp-action="Admin_home"> Estadisticas </a>
     </li>
     <li class="btn-custom">
         <a class="link-no-style" asp-area=" " asp-controller="Rols" asp-action="Index"> Roles </a>
