--- a/ProyectoHsj_alpha/Views/Account/ForgotPasswordConfirmation.cshtml
+++ b/ProyectoHsj_alpha/Views/Account/ForgotPasswordConfirmation.cshtml
@@ -2,8 +2,33 @@
     ViewData["Title"] = "Forgot Password Confirmation";
 }
 
-<h2>Forgot Password</h2>
-<p> Le llegara un Correo electronico con las instrucciones para restablecer la contraseña </p>
-<p>Si no recibe el Correo, espere es posible que demore algunos minutos</p>
+<h2 class="header">Olvidé mi contraseña</h2>
+<p class="text-info">Le llegará un correo electrónico con las instrucciones para restablecer la contraseña.</p>
+<p class="text-warning">Si no recibe el correo, espere; es posible que demore algunos minutos.</p>
 
-<a asp-action="Index" asp-controller="Home">Return to Home</a>
+<a asp-action="Index" asp-controller="Home" class="link-home">Return to Home</a>
+
+<style>
+    /* Cambiar colores del texto */
+    .header {
+        color: whitesmoke; /* Azul */
+    }
+
+    .text-info {
+        color: white; /* Verde */
+    }
+
+    .text-warning {
+        color: whitesmoke; /* Amarillo */
+    }
+
+    .link-home {
+        color: ; /* Naranja */
+        text-decoration: none;
+    }
+
+        .link-home:hover {
+            text-decoration: underline;
+            color: #e64a19; /* Naranja más oscuro al pasar el mouse */
+        }
+</style>
