--- a/ProyectoHsj_alpha/Views/Account/ResetPasswordConfirmation.cshtml
+++ b/ProyectoHsj_alpha/Views/Account/ResetPasswordConfirmation.cshtml
@@ -2,7 +2,18 @@
     ViewData["Title"] = "Reset Password Confirmation";
 }
 
-<h2>Contraseña restablecida</h2>
-<p>Su contraseña ha sido restablecida correctamente.</p>
+<h2 style="text-align: center; color: white; margin-top: 20px;">
+    Contraseña Restablecida
+</h2>
 
-<a asp-action="Login" asp-controller="Acces">Click aqui para volver al login</a>
+<p style="text-align: center; font-size: 18px; color: white; margin-bottom: 20px;">
+    Su contraseña ha sido restablecida correctamente.
+</p>
+
+<div style="text-align: center;">
+    <a asp-action="Login" asp-controller="Acces"
+       style="text-decoration: none; color: white; background-color: #007bff;
+              padding: 10px 20px; border-radius: 5px;">
+        Volver al inicio 
+    </a>
+</div>
