--- a/ProyectoHsj_alpha/Views/Shared/_Layout.cshtml
+++ b/ProyectoHsj_alpha/Views/Shared/_Layout.cshtml
@@ -9,6 +9,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-mr0sEQx0ugYb43aCvEd24S/IqrBKTFFmwSDQHl3j06YlXIQo6RuCZ1w5o9sMR4bo" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
@@ -16,10 +17,10 @@
     <link href="~/css/Style_navbar.css" rel="stylesheet" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/ProyectoHsj_alpha.styles.css" asp-append-version="true" />
-   
-    
-   
-    
+
+
+
+
 </head>
 <body>
     <header>
@@ -28,18 +29,16 @@
                 <a class="lg" asp-area="" asp-controller="Home" asp-action="Index">
                     <img src="~/css/img/hoysejuegaa.png" alt="Hoy se juega" class="img-fluid" />
                 </a>
-                
+
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Inicio</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Privacy">Pruebas</a>
-                        </li>
+
                         @if (User.Identity!.IsAuthenticated)
                         {
                             @if (User.IsInRole("2")) // Admin
@@ -54,19 +53,18 @@
                                     <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Admin_home">Employee Panel</a>
                                 </li>
                             }
-                            <!-- 
+                            <!--
                             <li class="nav-item">
                                 <a class="nav-link" asp-area="" asp-controller="Acces" asp-action="Cerrar">Cerrar sesión</a>
                             </li>
                             -->
-
                             <!-- Mi Perfil con el nombre de usuario -->
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" id="perfilDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                     <i class="fa-solid fa-user" style="color:white"></i>
                                 </a>
                                 <ul class="dropdown-menu" aria-labelledby="perfilDropdown">
-                                    <li><a class="dropdown-item"  asp-controller="PerfilU" asp-action="Perfil">Ver Perfil</a></li>
+                                    <li><a class="dropdown-item" asp-controller="PerfilU" asp-action="Perfil">Ver Perfil</a></li>
                                     <li class="dropdown-divider"></li>
                                     <li class="dropdown-item">
                                         <span>@User.Identity.Name</span> <!-- Nombre del usuario logueado -->
@@ -74,7 +72,7 @@
                                     <li><a class="dropdown-item" asp-controller="Acces" asp-action="Cerrar">Cerrar sesión</a></li>
                                 </ul>
                             </li>
-                            
+
                         }
                         @if (!User.Identity!.IsAuthenticated)
                         {
@@ -98,10 +96,15 @@
             <a href="https://www.instagram.com/hoy_se_juega/">
                 <i class="fa-brands fa-instagram"></i>
             </a>
-            <a href="https://beelup.com/ar/">
-                <i class="fa-brands fa-instagram"></i>
+            <a href="https://wa.me/5491122760377">
+                <i class="fa-brands fa-whatsapp"></i>
             </a>
-            <a href="/Home/Enlace3">Enlace 3</a>
+            <a href="https://beelup.com/ar/">
+                <i class="bi bi-display"></i>
+            </a>
+            <a href="/">
+                <i class="bi bi-house"></i>
+            </a>
         </p>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3280.430435698638!2d-58.478831225594874!3d-34.69432181307689!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccf548d3bf9c3%3A0x3356bcb2fd8a5151!2sHoy%20se%20juega%20f%C3%BAtbol%205!5e0!3m2!1ses-419!2sar!4v1725323915380!5m2!1ses-419!2sar"
                 width="300" height="300" style="border:0;" allowfullscreen=""
@@ -114,7 +117,7 @@
     <!-- Bootstrap JS (Incluye Popper) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 
-    
+
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <!-- scripts customs -->
     <script src="~/js/site.js" asp-append-version="true"></script>
@@ -123,5 +126,6 @@
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
+
 
 
