--- a/ProyectoHsj_alpha/Views/Usuarios/Index.cshtml
+++ b/ProyectoHsj_alpha/Views/Usuarios/Index.cshtml
@@ -18,7 +18,7 @@
 
 <div class="container mt-4">
     <p>
-        <a asp-action="Create" class="btn btn-primary">Create New</a>
+        <a asp-action="Create" class="btn btn-primary">Nuevo usuario</a>
     </p>
     <div class="table-responsive">
         <table class="table table-striped table-bordered table-dark">
@@ -29,7 +29,7 @@
                     <th>Correo</th>
                     <th>Numero de telefono</th>
                     <th>Rol</th>
-                    <th>Actions</th>
+                    <th>Acción</th>
                 </tr>
             </thead>
             <tbody>
@@ -42,12 +42,12 @@
                         <td>@Html.DisplayFor(modelItem => item.TelefonoUsuario)</td>
                         <td>@Html.DisplayFor(modelItem => item.IdRolNavigation.IdRol)</td>
                         <td>
-                            <a asp-action="Edit" asp-route-id="@item.IdUsuario" class="btn btn-warning btn-sm">Edit</a>
-                            <a asp-action="Details" asp-route-id="@item.IdUsuario" class="btn btn-info btn-sm">Details</a>
+                            <a asp-action="Edit" asp-route-id="@item.IdUsuario" class="btn btn-warning btn-sm">Editar</a>
+                            <a asp-action="Details" asp-route-id="@item.IdUsuario" class="btn btn-info btn-sm">Detalles</a>
                             
                             <button type="button" class="btn btn-danger btn-sm" data-bs-toggle="modal" data-bs-target="#confirmDeleteModal"
                                     data-id="@item.IdUsuario" data-nombre="@item.NombreUsuario">
-                                Delete
+                                Eliminar
                             </button>
                         </td>
                     </tr>
